# libadwaita-examples

./: README.md
load-template/gjs/: README.md
load-template/gjs/src/: main.js  window.js
load-template/python/: .gitignore  README.md  build.sh
load-template/python/src/: main.py  window.py  window.ui
load-template/rust/: Cargo.toml  README.md
load-template/rust/src/: main.rs  window.rs
load-template/vala/: README.md  meson.build
load-template/vala/src/: main.vala  meson.build  window.vala
